# termbf

./: Cargo.toml  README.md
bf/: hello2.bf  termbf.bf
img/: demo.tape
src/: app.rs  event.rs  interpreter.rs  main.rs  ui.rs  widget.rs
src/widget/: memory.rs
