[package]
name = "termbf"
version = "0.1.1"
edition = "2021"
description = "Terminal Brainf*ck visualizer"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/termbf"
repository = "https://github.com/lusingander/termbf"
readme = "README.md"
license = "MIT"
keywords = ["brainfuck", "interpreter", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
itsuki = "0.2.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-input = "0.11.1"
