[package]
name = "termbf"
version = "0.1.2"
edition = "2021"
description = "Terminal Brainf*ck visualizer"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/termbf"
repository = "https://github.com/lusingander/termbf"
readme = "README.md"
license = "MIT"
keywords = ["brainfuck", "interpreter", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
rust-version = "1.79.0"

exclude = ["/.github", "/img", "/bf"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
itsuki = "0.2.1"
laurier = "0.1.0"
ratatui = { version = "0.29.0" }
tui-input = "0.14.0"
